--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -35,7 +35,7 @@
 					<select id="eventdropdown" name="size" class="prettydropdown">
 						<option value="defaultselect">Select an Event</option>
 						{{#each meets}}
-						<option value="ranks/{{name}}">{{name}}</option>
+						<option value="meet/{{name}}">{{name}}</option>
 						{{/each}}
 					</select>
 			</div>
