--- a/views/view.handlebars
+++ b/views/view.handlebars
@@ -1,1 +1,67 @@
-{{ meet }}
+<!DOCTYPE html>
+<html >
+<head>
+  <meta charset="UTF-8">
+  <title>Material Design - Responsive Table</title>
+  <!--Import Google Icon Font-->
+  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <!-- Import Jquery -->
+  <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  
+  <!-- Compiled and minified JavaScript -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+
+   <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+  <!-- Program's style sheet -->
+  <link rel="stylesheet" href="/css/table.css">
+
+</head>
+
+<body>
+  <div id="tablecontainer">
+  <!-- Responsive table starts here -->
+  <!-- For correct display on small screens you must add 'data-title' to each 'td' in your table -->
+  <div class="table-responsive-vertical shadow-z-1">
+  <!-- Table starts here -->
+  <table id="resultstable" class="table table-striped table-mc-deep-orange" style="height:100%;width:100%">
+           <thead>
+             <tr>
+               <th>Match</th>
+               <th>Result</th>
+               <th>Red</th>
+               <th>Blue</th>
+             </tr>
+           </thead>
+           <tbody>
+			{{#with meet}}
+				{{#each rankings}}
+					<tr class="{{match}}_1">
+						<td data-title="Match" class="_match">{{match}}</td>
+						{{#with result}}
+						<td data-title="Result" class="_result">{{score}} {{winner}}</td>
+						{{/with}}
+						{{#with scores}}
+						<td data-title="Red" class="_red">{{red.[0]}}</td>
+						<td data-title="Blue" class="_blue">{{blue.[0]}}</td>
+						{{/with}}
+					</tr>
+					<tr class="{{match}}_2">
+						<td data-title="Match"></td>
+						<td data-title="Result"></td>
+						{{#with scores}}
+						<td data-title="Red" class="_red">{{red.[1]}}</td>
+						<td data-title="Blue" class="_blue">{{blue.[1]}}</td>
+						{{/with}}
+					</tr>
+				{{/each}}
+			{{/with}}
+           </tbody>
+         </table>
+  	</div>
+	</body>
+  <script src="/js/dependencies/sails.io.js"></script>
+	<script src="/js/app.js"></script>
+</html>
